1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LLIBRARIES, librandom_a_SOURCES): Remove.
	(noinst_HEADERS): Distribute Common*.m files.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile: Remove.
	
1998-06-21  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* random.h: Add summary and description tags for module.

1998-05-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* random.h, distributions.h, generators.h:  Add documentation tags.

1998-03-16  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* random.m: Declare gettimeofday for cygwin.

1998-02-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* C2LCGXgen.m ([C -setA:setv:setw:]): Make maxGen an unsigned long.
	Cast LONG_MAX to unsigned long in assignment to maxGen.  Change
	to %lu for maxGen printf field.

	* C4LCGXgen.m ([C -setA:setv:setw:]): Likewise.

1998-02-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* RandomVars.h:  initRandom now takes an argument object
	instead of argc, argv.

	* random.m (initRandom): Likewise.

1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* RandomVars.h (initRandom):  Constify argv.
	* random.m (initRandom): Likewise.

1998-01-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MT19937gen.m: Add @end.

1997-12-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ACGgen.h: Constify return of getName.
	* C2LCGXgen.h: Likewise.
	* C2MRG3gen.h: Likewise.
	* C2TAUSgen.h: Likewise.
	* C3MWCgen.h: Likewise.
	* C4LCGXgen.h: Likewise.
	* Common.gens.setparams.m: Likewise.
	* Common.xgens.setparams.m: Likewise.
	* LCGgen.h: Likewise.
	* MRGgen.h: Likewise.
	* MT19937gen.h: Likewise.
	* MWCAgen.h: Likewise.
	* MWCBgen.h: Likewise.
	* PMMLCGgen.h: Likewise.
	* PSWBgen.h: Likewise.
	* RWC2gen.h: Likewise.
	* RWC8gen.h: Likewise.
	* SCGgen.h: Likewise.
	* SWBgen.h: Likewise.
	* TGFSRgen.h: Likewise.
