@@ -114,7 +114,6 @@ Reference for	| Knuth, op.cit.
 output quality:	| 
 */
 
-#import <string.h>
 #import <random.h>
 #import <objectbase/SwarmObject.h>
 
