@@ -82,7 +82,6 @@ Relative speed:	| Speed 0.574 (time 1.741) relative to MT19937 getUnsignedSample
 */
 
 
-#import <string.h>
 #import <random.h>
 #import <objectbase/SwarmObject.h>
 
