@@ -99,7 +99,6 @@ Reference for	| Matsumoto and Nishimura, op. cit.
 output quality:	| 
 */
 
-#import <string.h>
 #import <random.h>
 #import <objectbase/SwarmObject.h>
 
