@@ -75,7 +75,6 @@ Relative speed:	| Speed 1.088 (time 0.919) relative to MT19937 getUnsignedSample
 */
 
 
-#import <string.h>
 #import <random.h>
 #import <objectbase/SwarmObject.h>
 
