@@ -22,7 +22,6 @@ Date:		 1997-09-01 (v. 0.7)
 123456789|123456789|123456789|123456789|123456789|123456789|123456789|123456789|
 */
 
-#import <string.h>
 #import <math.h>
 
 #import <collections.h>
