@@ -100,7 +100,6 @@ Relative speed:	| Speed 0.792 (time 1.263) relative to MT19937 getUnsignedSample
 --------------- | --------------------------------------------------------------
 */
 
-#import <string.h>
 #import <random.h>
 #import <objectbase/SwarmObject.h>
 
