@@ -71,7 +71,6 @@ Relative speed:	| Speed 0.497 (time 2.013) relative to MT19937 getUnsignedSample
 */
 
 
-#import <string.h>
 #import <random.h>
 #import <objectbase/SwarmObject.h>
 
