@@ -1,3 +1,13 @@
+1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* ACGgen.h, BernoulliDist.m, C2LCGXgen.h, C2MRG3gen.h,
+	C2TAUSgen.h, C3MWCgen.h, C4LCGXgen.h, ExponentialDist.m,
+	GammaDist.m, LCGgen.h, LogNormalDist.m, MRGgen.h, MT19937gen.h,
+	MWCAgen.h, MWCBgen.h, NormalDist.m, PMMLCGgen.h, PSWBgen.h,
+	RWC2gen.h, RWC8gen.h, RandomBitDist.m, SCGgen.h, SWBgen.h,
+	TGFSRgen.h, UniformDoubleDist.m, UniformIntegerDist.m,
+	UniformUnsignedDist.m: Don't include string.h.
+
 1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>
 
 	* Makefile.am (lib_LLIBRARIES, librandom_a_SOURCES): Remove.
